feat: finalize native library and add user test case